style.css
* {
    padding: 0;
    margin: 0;
}

@font-face {
    font-family: europa;
    src: url(fonts/EuropaNuovaBold.woff);
    src: url(fonts/EuropaNuovaRegular.woff);
}

@font-face {
    font-family: eurostile;
    src: url(fonts/fonnts.com-Eurostile_Bold.otf);
}

:root {
    --primary-color: rgb(110, 7, 243);
    --primary-font: 'europa', sans-serif;
    --secondary-font: 'eurostile', monospace;
    --skill-icons-back: #5BE9B9;
}

html {
    font-size: 16px;
}

body {
    min-width: 100vw;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}


header {
    height: 150px;
    width: 100vw;
    align-items: center;
    display: flex;
    justify-content: space-between;
    background-color: white;
    color: black;
}

main {
    width: 100%;
    justify-content: center;
    align-items: center;
}

ul {
    align-items: center;
    display: flex;
    justify-content: center;
}

ul li {
    list-style: none;
    padding: 20px;
}

#logo {
    font-family: Carattere;
    font-weight: bold;
    font-size: 55px;
    color: var(--primary-color);
    cursor: pointer;
}

.space-header {
    width: 60vw;
}

#about-btn {
    padding: 8px 12px;
    font-family: var(--primary-font);
    color: rgb(53, 53, 53);
    font-size: 18px;
    margin-right: 30px;
}

#hello-btn,
#dribble-btn {
    padding: 8px 20px;
    font-family: europa;
    color: var(--primary-color);
    border: 2px solid var(--primary-color);
    border-radius: 25px;
    font-size: 18px;
    display: flex;
    justify-content: center;
    align-items: center;
    width: auto;
}

#about-btn:hover {
    color: var(--primary-color);
    cursor: pointer;
}

#hello-btn:hover,
#dribble-btn:hover {
    color: white;
    background-color: var(--primary-color);
    cursor: pointer;
}


.splash-section {
    height: auto;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.splash-section div:first-child {
    height: 500px;
    width: 100vw;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.splash-section h1 {
    margin: 100px 0 24px 0;
    font-size: 50px;
    color: rgb(36, 36, 36);
    font-family: var(--secondary-font);
    font-weight: 700;
}

.splash-section p {
    font-family: var(--primary-font);
    font-size: 24px;
}

#avatar {
    margin: 75px 0 100px 0;
}

#devices-illutration {
    max-width: 860px;
    margin: 80px 0 0 0;
}

.about-section {
    background-color: var(--primary-color);
    color: white;
    height: 600px;
    display: flex;
    flex-direction: column;
    justify-content: top;
    align-items: center;
    padding: 150px 0 0 0;
}

.about-section div {
    width: 45vw;
}

.about-section h1 {
    margin: 0 0 30px 0;
    font-size: 32px;
    font-family: var(--secondary-font);
    font-weight: bold;
    justify-content: center;
    display: flex;
}

.about-section p {
    font-family: var(--primary-font);
    font-size: 20px;
    line-height: 40px;
    text-align: center;
}


/* Skill section */

.skill-section {
    width: 100vw;
    height: auto;
    display: flex;
    justify-content: center;
    align-items: center;

}

.skill-cards {
    box-sizing: border-box;
    height: 800px;
    width: 450px;
    padding: 50px 20px 0 20px;
    background-color: white;
    display: flex;
    flex-direction: column;
    justify-content: top;
    align-items: center;
    box-shadow: 0 0 1px;
    margin-top: -200px;
}


.skill-card-1 {
    border-radius: 15px 0 0 15px;
}

.skill-card-2 {
    border-radius: 0 0 0 0;
}

.skill-card-3 {
    border-radius: 0 15px 15px 0;
}

.layer-icons {
    background-color: var(--skill-icons-back);
    border-radius: 50%;
    width: 60px;
    height: 60px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.skill-icons {
    height: 30px;
    width: 30px;
}

.skill-cards h1,
.recent-works h1,
.collab-companies-section h1 {
    font-family: var(--secondary-font);
    color: black;
    font-size: 23px;
    margin: 24px 0;
}

.skill-cards p,
.recent-works p {

    font-family: var(--primary-font);
    font-size: 17px;
    text-align: center;
}

.sub-headlines-skill {
    color: var(--primary-color);
    margin: 50px 0 10px 0;
}

.skill-cards ul {
    display: flex;
    flex-direction: column;
    font-family: var(--primary-font);
    list-style: none;
}

.skill-section li {
    font-size: 17px;
    padding: 5px;

}

.recent-works,
.collab-companies-section {
    width: 100vw;
    height: auto;
    margin: 100px 0 100px 0;
    min-height: 500px;
    display: flex;
    flex-direction: column;
    justify-content: top;
    align-items: center;
}

.recent-works h1,
.collab-companies-section h1 {
    font-size: 30px;
}

.recent-works p {
    font-size: 18px;
}

.recent-works-showcase {
    margin: 80px 200px 80px 200px;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
}

.recent-works-showcase img {
    margin: 20px 20px 20px 20px;
    height: auto;
    width: 450px;
    border-radius: 15px;
}

#dribble-btn {
    margin-bottom: 150px;
    height: 50px;
    background-color: white;
}

#dribble-btn svg {
    margin-right: 10px;
    height: 20px;
    width: 20px;
    fill: var(--primary-color);
}

#dribble-btn:hover svg path {
    fill: white;
}

.section-divider {
    height: 1px;
    width: 100%;
    background-color: #e6ecf8;
    border: none;
}

.collab-companies-section h1 {
    width: 40vw;
    text-align: center;
    font-size: 35px;
}

.collab-companies-showcase img {
    height: auto;
    width: 350px;
}

.collab-companies-showcase {
    margin: 80px 200px 0px 200px;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    max-width: 70vw;
}


.project-contact-message-section {
    background-color: #141c3a;
    height: 180px;
    width: 80vw;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    margin: 0 auto;
    position: relative;
    bottom: -100px;
    color: white;
    border-radius: 15px;
    padding: 30px;
}

.project-contact-message-section h1 {
    font-size: 32px;
    font-family: var(--secondary-font);
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
}

.project-contact-message-section p {
    width: 30%;
    text-align: center;
    font-size: 18px;
    font-family: var(--primary-font);
    display: flex;
    justify-content: center;
    align-items: center;
    line-height: 30px;
}

#lets-do-btn {
    height: 60px;
    background-color: transparent;
    color: white;
    padding: 8px 20px;
    font-family: europa;
    border: 2px solid #5BE9B9;
    border-radius: 5555px;
    font-size: 18px;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 200px;
}

#lets-do-btn svg {
    margin-right: 10px;
    height: 25px;
    width: 25px;
    fill: var(--primary-color);
}

#lets-do-btn:hover {
    background-color: #5BE9B9;
    color: #141c3a;
    cursor: pointer;
}

/* Footer area starts from here */

footer {
    height: 600px;
    width: 100vw;
    align-items: center;
    display: flex;
    justify-content: center;
    background-color: var(--primary-color);
    color: black;
}

#logo-footer {
    font-family: Carattere;
    font-weight: bold;
    font-size: 60px;
    color: white;
    margin-bottom: 40px;
    margin-top: 150px;
}

.footer-sec-1 div:first-child {
    align-items: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.footer-sec-1 div h1 {
    color: white;
    font-family: var(--secondary-font);
    font-weight: 100;
    font-size: 28px;
    text-align: center;
}

.social-media-footer {
    gap: 30px;
    margin: 50px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.social-media-footer svg {
    margin-right: 10px;
    height: 25px;
    width: 25px;
    padding: 10px;
    fill: white;
    border: 2px solid white;
    border-radius: 50px;
}

.copyright-text {
    display: flex;
    align-items: center;
    justify-content: center;
}

.copyright-text p {
    display: flex;
    align-items: center;
    justify-content: center;
    color: white;
    font-family: var(--primary-font);
    font-size: 17px;
}

.copyright-text svg {
    height: 20px;
    width: 20px;
    fill: white;
    margin: 0 7px;
}

.footer-social-media-btn:hover svg {
    background-color: white;
    fill: var(--primary-color);
    cursor: pointer;
}

@media screen and (max-width: 700px) {
    .project-contact-message-section {
        flex-direction: column;
        height: auto;
        padding: 30px;
    }

    #lets-do-btn{
        height: 50px;
    }

    .project-contact-message-section p{
        width: 80%;
        margin: 20px;
    }
}

